<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#eee"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="20dp"
    android:id="@+id/parent_layout">

    <TableRow
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_height="3dp"
            android:layout_width="38dp"
            android:layout_column="0"/>

        <TextView
            android:id="@+id/textView_weekNr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="100"
            android:text="@string/dummyWeek"
            android:textSize="30sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_gravity="end"
            android:textSize="25sp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/textView_date1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dummyDate" />

        <TextView
            android:gravity="bottom"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/textView_day1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/day1s" />

        <TextView
            android:gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dummyContent" />

    </TableRow>
    <View
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#999"/>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_gravity="end"
            android:textSize="25sp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/textView_date2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dummyDate" />

        <TextView
            android:gravity="bottom"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/textView_day2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/day2s" />

        <TextView
            android:gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dummyContent" />

    </TableRow>

    <View
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#999"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_gravity="end"
            android:textSize="25sp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/textView_date3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummyDate" />

        <TextView
            android:gravity="bottom"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/textView_day3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/day3s" />

        <TextView
            android:gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dummyContent" />

    </TableRow>

    <View
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#999"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_gravity="end"
            android:textSize="25sp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/textView_date4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dummyDate" />

        <TextView
            android:gravity="bottom"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/textView_day4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/day4s" />

        <TextView
            android:gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dummyContent" />

    </TableRow>

    <View
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#999"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_gravity="end"
            android:textSize="25sp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/textView_date5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dummyDate" />

        <TextView
            android:gravity="bottom"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/textView_day5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/day5s" />

        <TextView
            android:gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dummyContent" />

    </TableRow>

    <View
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#999"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:gravity="bottom"
            android:layout_gravity="end"
            android:textSize="25sp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/textView_date6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dummyDate" />

        <TextView
            android:gravity="bottom"
            android:textColor="#f00"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/textView_day6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/day6s" />

        <TextView
            android:gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dummyContent" />

    </TableRow>

    <View
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#999"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:gravity="bottom"
            android:layout_gravity="end"
            android:textSize="25sp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/textView_date7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dummyDate" />

        <TextView
            android:gravity="bottom"
            android:textColor="#f00"
            android:textSize="20sp"
            android:id="@+id/textView_day7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/day7s" />

        <TextView
            android:gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dummyContent" />

    </TableRow>

    <View
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#999"/>
</TableLayout>